--- a/MotoConnect/pom.xml
+++ b/MotoConnect/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>mysql-connector-java-8.0.30</groupId>
+            <artifactId>mysql-connector-java-8.0.30</artifactId>
+            <version>8.0.30</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
