--- a/MotoConnect/pom.xml
+++ b/MotoConnect/pom.xml
@@ -14,14 +14,10 @@
     </repositories>
     <dependencies>
         <dependency>
-            <groupId>unknown.binary</groupId>
+            <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
-            <version>SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>mysql-connector-java-8.0.30</groupId>
-            <artifactId>mysql-connector-java-8.0.30</artifactId>
-            <version>8.0.30</version>
+            <version>RELEASE90</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
