--- a/MotoConnect/pom.xml
+++ b/MotoConnect/pom.xml
@@ -23,7 +23,12 @@
         <artifactId>AbsoluteLayout</artifactId>
         <version>SNAPSHOT</version>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>mysql-connector-java-8.0.30</groupId>
+            <artifactId>mysql-connector-java-8.0.30</artifactId>
+            <version>8.0.30</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>20</maven.compiler.source>
